update to notebook

--- a/Kaggle_Superstore_Marketing_Campaign.ipynb
+++ b/Kaggle_Superstore_Marketing_Campaign.ipynb
@@ -34,8 +34,8 @@
     "## Project Plan\n",
     "---\n",
     "\n",
-    "1. [Exploratory Analysis](#section-1-exploratory-analysis)\n",
-    "2. [Data Cleaning](#section-2-data-cleaning)\n",
+    "1. Exploratory Analysis\n",
+    "2. Data Cleaning\n",
     "3. Feature Prep\n",
     "4. Data Splitting\n",
     "5. Create Baseline Model\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "15559165-8b91-460e-956c-ee82257133b5",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,11 +276,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Define the file path\n",
-    "file_path = r\"C:\\Users\\katie\\Documents\\Portfolio-Projects\\kaggle-superstore-marketing\\superstore_data.csv.csv\"\n",
-    "\n",
-    "# Load the CSV file into a pandas DataFrame\n",
-    "df = pd.read_csv(file_path)\n",
+    "url = \"https://raw.githubusercontent.com/Analyst-KatieD/kaggle-superstore-marketing/main/superstore_data.csv\"\n",
+    "df = pd.read_csv(url)\n",
     "\n",
     "# Display the first few rows to confirm it loaded correctly\n",
     "df.head()\n"
